@@ -1,0 +1,16 @@
+# /usr/share/common-licenses list
+# generated by ls -1 /usr/share/common-licenses/
+Apache-2.0
+Artistic
+BSD
+GFDL
+GFDL-1.2
+GFDL-1.3
+GPL
+GPL-1
+GPL-2
+GPL-3
+LGPL
+LGPL-2
+LGPL-2.1
+LGPL-3
