@@ -17,6 +17,10 @@ lintian (2.5.16) UNRELEASED; urgency=low
   * checks/control-file.{desc,pm}:
     + [BR] Add check for field name being duplicated in
       the value of the field.  (Closes: #711069)
+  * checks/copyright-file.pm:
+    + [BR] Extend check for "reference to compressed
+      common-license" to include all current
+      common-licenses.
   * checks/cruft.pm:
     + [NT] Skip d/README.Debian and d/README.source when
       checking for non-free licenses.  Mentions here are
